fixed issue where css overlappep / added login  button

--- a/src/components/CodeList/codeList.css
+++ b/src/components/CodeList/codeList.css
@@ -4,7 +4,7 @@
 .code-card {
 	border: 2px solid;
 	text-align: center;
-	padding-bottom: 5px;
+	padding-bottom: 8px;
 	margin-bottom: 8px;
 	margin-right: 3px;
 }
@@ -20,3 +20,5 @@
 	grid-template-rows: 100px;
 	margin: 0;
 }
+
+
