--- a/src/components/Searchbar/Searchbar.css
+++ b/src/components/Searchbar/Searchbar.css
@@ -1,38 +1,39 @@
 input {
-    background: rgb(232, 232, 232);
-    flex-grow: 1;
+	background: rgb(232, 232, 232);
+	flex-grow: 1;
 }
 input:focus,
 input:hover,
 .submit:focus,
 .submit:hover {
-    background: rgb(196, 196, 196);
+	background: rgb(196, 196, 196);
 }
-input, .submit {
-    border: 2px solid black;
-    font-size: 1.1rem;
-    padding: 0.25rem 1rem;
-    border-radius: 10px;
-    cursor: pointer;
+input,
+.submit {
+	border: 2px solid black;
+	font-size: 1.1rem;
+	padding: 0.25rem 1rem;
+	border-radius: 10px;
+	cursor: pointer;
 }
 .form-horizontal {
-    display: flex;
-    flex-grow: 1;
-    width: 100%;
+	display: flex;
+	flex-grow: 1;
+	width: 100%;
 }
 .submit {
-    margin-left: 1rem;
-    background: rgb(232, 232, 232);
+	margin-left: 1rem;
+	background: rgb(232, 232, 232);
 }
 @media (max-width: 600px) {
 	.form-horizontal {
-        flex-direction: column;
-    }
-    .submit {
-        margin: 1rem 0 0 0;
-    }
+		flex-direction: column;
+	}
+	.submit {
+		margin: 1rem 0 0 0;
+	}
 }
 a {
-    text-decoration: none;
-    color: black;
+	text-decoration: none;
+	color: black;
 }
